--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,19 @@ body{
     font-family: Play, sans-serif;
     background-color: #1E2026;
     display: flex;
+    height: 100%;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .nav{
     margin-top: 60px;
     border-radius: 20px;
-    width: 1842px;
-    height: 1010px;
+    max-width: 1842px;
+    min-height: 1010px;
     background-color: #780033;
 }
 
@@ -34,14 +37,13 @@ body{
 }
 
 .nav-button-section{
-    position: relative;
+    cursor: pointer;
     z-index: 1;
-    padding: 0 30px 1px 30px;
+    padding: 0 40px 1px 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: 170px;
-    max-width: 210px;
     height: 74px;
 
 }
@@ -62,8 +64,8 @@ body{
 .end{
     text-align: center;
     position: relative;
-    right: -6px;
-    padding: 0 30px 25px 30px;
+    margin-right: -7px;
+    padding-bottom: 22px;
 }
 
 .start{
@@ -141,15 +143,14 @@ body:last-child{
 }
 
 .information{
-    position: absolute;
-    bottom: -3px;
+    transform: translate(-8px, 7px);
+    margin-top: 150px;
     flex-shrink: 0;
     align-self: center;
-    width: 1920px;
+    width: 100%;
     height: 359px;
-    margin-bottom: 0;
     background-color: #780033;
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 20px 20px 0 0;
     border: 4px solid #FFF;
     border-bottom: 0;
     box-shadow: 0px 4px 100px 0px rgba(255, 255, 255, 0.25);
@@ -200,14 +201,10 @@ body:last-child{
     min-height: 845px;
 }
 
-.image-card{
-    margin-top: 90px;
-    display: flex;
-    justify-content: center;
-}
 
 .image-prod{
-    transition: all .3s;
+    object-fit: cover;
+    transition: all .5s;
     margin-right: 20px;
     width: 202px;
     height: 637px;
@@ -220,26 +217,46 @@ body:last-child{
 }
 
 .text{
+    overflow: hidden;
+    pointer-events: none;
     margin-right: 21px;
     margin-bottom: 21px;
-    width: 160px;
+    min-width: 160px;
     height: 86px;
     border-radius: 40px;
-    border: 0.5px solid #FFF;
-    background: rgba(0, 0, 0, 0.30);
-    box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 0.50);
-    backdrop-filter: blur(12.5px);
+    border: 1px solid #FFF;
+    background: rgba(0, 0, 0, 0.20);
+    box-shadow: 0 4px 50px 0 rgba(0, 0, 0, 0.50);
+    backdrop-filter: blur(13px);
     position: absolute;
     font-family: Raleway, sans-serif;
-    font-size: 18px;
+    font-size: 36px;
     font-style: normal;
     color: white;
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
     padding-bottom: 10px;
     font-weight: 400;
+    transition: all, .5s;
 }
+
+.hah{
+     color: #FFF;
+     leading-trim: both;
+     text-edge: cap;
+     font-size: 18px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 92.045%; /* 16.568px */
+     letter-spacing: -0.36px;
+    margin-left: 21px;
+    margin-right: 42px;
+    padding-bottom: 0;
+    padding-left: 21px;
+    text-align: start;
+    transition: all, 0.01s;
+ }
 .images-all{
     margin-top: 146px;
     display: flex;
@@ -252,4 +269,94 @@ body:last-child{
     display: flex;
     flex-direction: column;
     position: relative;
+}
+
+.help{
+    width: 1920px;
+    margin-top: 150px;
+    margin-left: 80px;
+    margin-right: 80px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+
+.help-text{
+    margin-right: 41px;
+    height: 274px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding-top: 0;
+}
+
+.help-text > h1{
+    margin: 0;
+    font-size: 88px;
+    font-weight: 800;
+}
+
+.help-text > span{
+    margin-top: 40px;
+    font-family: Raleway, sans-serif;
+    width: 890px;
+    height: 140px;
+    font-size: 36px;
+    font-weight: 100 ;
+    line-height: 92.045%;
+    font-style: normal;
+    letter-spacing: -0.72px;
+}
+
+.help-text > p{
+    margin-top: 44px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.help-text > ul{
+    font-family: Raleway, sans-serif;
+    list-style-type: none;
+    margin-top: 0;
+    font-size: 28px;
+    font-weight: lighter;
+
+}
+
+.help-image{
+
+    justify-content: end;
+    display: flex;
+}
+
+ul>li{
+    margin-bottom: 34px;
+    font-weight: lighter;
+}
+
+.help-image > img{
+    width: 870px;
+}
+
+.help-button{
+    cursor: pointer;
+    align-self: end;
+    position: absolute;
+    border-radius: 12.5px;
+    background: #804BF2;
+    box-shadow: 0px 4px 25px 0px rgba(255, 246, 246, 0.40);
+    color: white;
+    font-size: 18px;
+    padding: 26px 36px;
+    margin-bottom: 25px;
+    margin-right: 25px;
+    border: 0 black solid;
+}
+
+.help-button:active{
+    background: #7130f6;
+}
+
+.second{
+    height: 374px;
 }
